more of trying to fix the image wrap issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -393,8 +393,8 @@ input, textarea {
 }
 
 .blog-post-feature-image-wrap {
-	background-repeat: no-repeat;
-	width: inherit;
+	padding: 0;
+	background-position: 9999% 9999%;
 	img {
 		width:100%;
 	}
